# Perblis_Terminal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Implementations.md  MOBILE_WAVE_00_PROJECT_SETUP.md  MOBILE_WAVE_01_AUTH.md  MOBILE_WAVE_01_AUTHENTICATION.md  MOBILE_WAVE_02_LISTINGS_SEARCH.md  MOBILE_WAVE_03_BOOKINGS.md  MOBILE_WAVE_04_MESSAGING.md  MOBILE_WAVE_05_PROFILE_POLISH.md  Procfile  README.md  WAVE_00_PROJECT_SETUP.md  WAVE_01_ACCOUNTS.md  WAVE_02_LISTINGS_SEARCH.md  WAVE_03_BOOKINGS_MESSAGING.md  WAVE_04_POLISH_DEPLOY.md  WAVE_05_PART1_OWNER_API.md  WAVE_05_PART2_OWNER_API.md  WAVE_06_PART1_TESTS.md  WAVE_06_PART2_TESTS.md  design.md  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml
backend/: .env.example  Dockerfile  Procfile  asgi.py  conftest.py  manage.py  pyproject.toml  railway.json  railway.worker.json  urls.py  wsgi.py
backend/accounts/: admin.py  authentication.py  enums.py  errors.py  factories.py  managers.py  models.py  serializers.py  tasks.py  throttles.py  urls.py  views.py
backend/accounts/integrations/: email.py  media.py  sms.py
backend/accounts/migrations/: 0001_initial.py  0002_user_consent_name_tokenversion.py  (+1 more)
backend/core/: admin.py  encryption.py  exceptions.py  fields.py  health.py  ids.py  media.py  models.py  money.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/hires/: apps.py
backend/listings/: admin.py  enums.py  errors.py  factories.py  models.py  serializers.py  spec_data.py  state.py  tasks.py  urls.py  views.py
backend/openapi/: schema.yml
backend/scripts/: check_env_example.py
backend/search/: serializers.py  throttles.py  urls.py  views.py
backend/settings/: base.py  dev.py  prod.py  test.py
backend/suppliers/: admin.py  errors.py  factories.py  models.py  serializers.py  urls.py  views.py
(+271 files in other folders)
