[project]
name = "terminal-backend"
version = "0.1.0"
description = "Terminal — map-first B2B marketplace for hiring heavy assets in Nigeria (Django API)"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<6.1",
    "djangorestframework>=3.17,<3.18",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "djangorestframework-gis>=1.1",
    "django-tasks>=0.12",
    "django-tasks-db>=0.1",
    "django-environ>=0.11",
    "django-filter>=24.0",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "structlog>=24.0",
    "sentry-sdk>=2.0",
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "hypothesis>=6.0",
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, pyupgrade, flake8-comprehensions
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"settings/*.py" = ["F405", "F403"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "settings/*",
    "manage.py",
    "wsgi.py",
    "asgi.py",
]

[tool.coverage.report]
# Overall gate; per-app gates (85% hires/payments) enforced in CI via a focused run.
fail_under = 70
show_missing = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["migrations", "build", "dist"]
